fb and google login done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,21 @@
     <string name="app_name">GoogleLoginApp</string>
     <string name="desc_firebase_lockup">Firebase logo and name</string>
 
+    <string name="facebook_app_id">1685948444866971</string>
+    <string name="fb_login_protocol_scheme">fb268817170579509</string>
+
+    <string name="loading">Loading…</string>
+    <string name="signed_out">Signed Out</string>
+
+
+    <string name="firebase_status_fmt">Firebase User: %s</string>
+    <string name="firebaseui_title_text">FirebaseUI Auth</string>
+
+    <string name="google_status_fmt">Google User: %s</string>
+    <string name="google_title_text">Google Sign In</string>
+
+    <string name="facebook_status_fmt">Facebook User: %s</string>
+    <string name="facebook_title_text">Facebook Login</string>
 
 
 
