--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,12 @@
     <string name="desc_firebase_lockup">Firebase logo and name</string>
 
     <string name="facebook_app_id">1685948444866971</string>
-    <string name="fb_login_protocol_scheme">fb268817170579509</string>
+    <string name="ak_login_protocol_scheme">akf3b288ff90616796ece1f3ebccb27515</string>
 
+    <string name="ACCOUNT_KIT_CLIENT_TOKEN">f3b288ff90616796ece1f3ebccb27515</string>
+
+
+    <!--<string name="fb_login_protocol_scheme">f3b288ff90616796ece1f3ebccb27515</string>-->
     <string name="loading">Loading…</string>
     <string name="signed_out">Signed Out</string>
 
@@ -21,5 +25,34 @@
 
 
 
+    <string name="email">Email Id</string>
+    <string name="passowrd">Password</string>
+    <string name="login">LOGIN</string>
+    <string name="show_pwd">Show Password</string>
+    <string name="hide_pwd">Hide Password</string>
+    <string name="forgot">Forgot password?</string>
+    <string name="closebutton">Close Button for Activity</string>
+    <string name="newUser">Not a Member yet? Sign Up here.</string>
+    <string name="fullName">Full Name</string>
+    <string name="mobileNumber">Mobile Number</string>
+    <string name="location">Location</string>
+    <string name="confirmPassword">Confirm Password</string>
+    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
+    <string name="signUp">SIGN UP</string>
+    <string name="already_user">Already have Account? Login here.</string>
+    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
+    <string name="submit">SUBMIT</string>
+    <string name="back">BACK</string>
+
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_drawer">Personal</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
 
 </resources>
